// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders empty table 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-empty"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
          >
            <table
              style="table-layout:auto"
            >
              <colgroup />
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell"
                  >
                    Column 1
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 2
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 3
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 4
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 5
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 6
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 7
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 8
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-placeholder"
                >
                  <td
                    class="ant-table-cell"
                    colspan="8"
                  >
                    <div
                      class="ant-empty ant-empty-normal"
                    >
                      <div
                        class="ant-empty-image"
                      >
                        <svg
                          class="ant-empty-img-simple"
                          height="41"
                          viewBox="0 0 64 41"
                          width="64"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            transform="translate(0 1)"
                          >
                            <ellipse
                              class="ant-empty-img-simple-ellipse"
                              cx="32"
                              cy="33"
                              rx="32"
                              ry="7"
                            />
                            <g
                              class="ant-empty-img-simple-g"
                              fill-rule="nonzero"
                            >
                              <path
                                d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                              />
                              <path
                                class="ant-empty-img-simple-path"
                                d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                              />
                            </g>
                          </g>
                        </svg>
                      </div>
                      <div
                        class="ant-empty-description"
                      >
                        No Data
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with custom emptyText 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-empty"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
          >
            <table
              style="table-layout:auto"
            >
              <colgroup />
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell"
                  >
                    Column 1
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 2
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 3
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 4
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 5
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 6
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 7
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 8
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-placeholder"
                >
                  <td
                    class="ant-table-cell"
                    colspan="8"
                  >
                    custom empty text
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with fixed columns 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left ant-table-has-fix-right"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
            style="overflow-x:auto;overflow-y:hidden"
          >
            <table
              style="width:1px;min-width:100%;table-layout:fixed"
            >
              <colgroup>
                <col
                  style="width:100px;min-width:100px"
                />
                <col
                  style="width:100px;min-width:100px"
                />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col
                  style="width:100px;min-width:100px"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    Full Name
                  </th>
                  <th
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Age
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 1
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 2
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 3
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 4
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 5
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 6
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 7
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 8
                  </th>
                  <th
                    class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                    style="position:sticky;right:0"
                  >
                    Action
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="ant-table-measure-row"
                  style="height:0;font-size:0"
                >
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-table-placeholder"
                >
                  <td
                    class="ant-table-cell"
                    colspan="11"
                  >
                    <div
                      class="ant-table-expanded-row-fixed"
                      style="width:0;position:sticky;left:0;overflow:hidden"
                    >
                      <div
                        class="ant-empty ant-empty-normal"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            class="ant-empty-img-simple"
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                class="ant-empty-img-simple-ellipse"
                                cx="32"
                                cy="33"
                                rx="32"
                                ry="7"
                              />
                              <g
                                class="ant-empty-img-simple-g"
                                fill-rule="nonzero"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  class="ant-empty-img-simple-path"
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <div
                          class="ant-empty-description"
                        >
                          No Data
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table without emptyText when loading 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div>
      <div
        class="ant-spin ant-spin-spinning"
      >
        <span
          class="ant-spin-dot ant-spin-dot-spin"
        >
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        class="ant-table ant-table-empty"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
          >
            <table
              style="table-layout:auto"
            >
              <colgroup />
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell"
                  >
                    Column 1
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 2
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 3
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 4
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 5
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 6
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 7
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Column 8
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-placeholder"
                >
                  <td
                    class="ant-table-cell"
                    colspan="8"
                  >
                    <div
                      class="ant-empty ant-empty-normal"
                    >
                      <div
                        class="ant-empty-image"
                      >
                        <svg
                          class="ant-empty-img-simple"
                          height="41"
                          viewBox="0 0 64 41"
                          width="64"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            transform="translate(0 1)"
                          >
                            <ellipse
                              class="ant-empty-img-simple-ellipse"
                              cx="32"
                              cy="33"
                              rx="32"
                              ry="7"
                            />
                            <g
                              class="ant-empty-img-simple-g"
                              fill-rule="nonzero"
                            >
                              <path
                                d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                              />
                              <path
                                class="ant-empty-img-simple-path"
                                d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                              />
                            </g>
                          </g>
                        </svg>
                      </div>
                      <div
                        class="ant-empty-description"
                      >
                        No Data
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
